----------------------------------------------------------------------
 OmegaT 2.2.0 update 3 
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.2.0 update 3 vs. 2.2.0 update 2

  Other enhancements:

  - Polish localisation updated to 2.1.3 (UI, Instant Start, Readme, documentation)

  - Hunspell updated to 1.2.12

----------------------------------------------------------------------
 OmegaT 2.2.0 update 2 
----------------------------------------------------------------------
  1 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.2.0 update 2 vs. 2.2.0 update 1

  Other enhancements:

  - Italian localisation updated to 2.2.0 update 1 (UI, Instant Start, Readme, documentation)

  Bug fixes:

  - HTML filter: Entities from attributes were not converted to 
characters. This applied also to the HTML Help Compiler Filter.

  - MT using Google fails to give results in Traditional Chinese
  http://sourceforge.net/support/tracker.php?aid=3086757

----------------------------------------------------------------------
 OmegaT 2.2.0 update 1 
----------------------------------------------------------------------
  4 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.2.0 update 1 vs. 2.2.0

  Implemented requests:

  - Make the number of search results a parameter
  http://sourceforge.net/support/tracker.php?aid=3084009

  Other enhancements:

  - Galician localisation updated to 2.1.9 (UI, Instant Start, Readme)
  - Italian localisation updated to 2.2.0 (UI, Instant Start, Readme)
  - Japanese localisation updated to 2.2.0 (UI, Instant Start, Readme, 2.0.5 documentation)

  Bug fixes:

  - XML, wrong handling of comments and PI in translatable text
  http://sourceforge.net/support/tracker.php?aid=1662205
